examples/passing/MethodCall.purs
foreign import foo :: () -> {} 

test = {
    foo();
    return 0;
  }
