examples/failing/UnknownType.purs
module Main where

test :: Number -> Something
test = {}
